--- a/simple.html
+++ b/simple.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <!--
 Copyright Notice
-Some silly changes from master branch
+These changes are from the feature
+branch bigtrouble
 -->
 
 <head>
 
-	<title>An Very Silly Website</title>
+	<title>Lots of Trouble</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
