--- a/simple.html
+++ b/simple.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
 Copyright Notice
-Adding changes before rebasing conflicts
+Some silly changes from master branch
 -->
 
 <head>
 
-	<title>An Very Respectfull Website</title>
+	<title>An Very Silly Website</title>
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
@@ -19,10 +19,10 @@ Adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-
-			Some interesting stuff goes here
+			Just stuff for now,
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
